refactor: Leverage toList directly